# sql-learning-materials

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
challenging-sql-problems/challenging-sql-problems/: index.html
challenging-sql-problems/problems/bronze/combining-dimensions/: index.html
challenging-sql-problems/problems/bronze/customer-churn/: index.html
challenging-sql-problems/problems/bronze/fibonacci-sequence/: index.html
challenging-sql-problems/problems/bronze/outstanding-invoices/: index.html
challenging-sql-problems/problems/bronze/personalised-customer-emails/: index.html
challenging-sql-problems/problems/bronze/suspicious-login-activity/: index.html
challenging-sql-problems/problems/bronze/temperature-anomaly-detection/: index.html
challenging-sql-problems/problems/bronze/uk-bank-holidays/: index.html
challenging-sql-problems/problems/gold/encoding-datelist-ints/: index.html
challenging-sql-problems/problems/gold/loan-repayment-schedule/: index.html
challenging-sql-problems/problems/gold/risk-invasions/: index.html
challenging-sql-problems/problems/gold/supply-chain-network/: index.html
challenging-sql-problems/problems/gold/travel-plans/: index.html
challenging-sql-problems/problems/silver/bannable-login-activity/: index.html
challenging-sql-problems/problems/silver/bus-routes/: index.html
challenging-sql-problems/problems/silver/customer-sales-running-totals/: index.html
challenging-sql-problems/problems/silver/decoding-datelist-ints/: index.html
challenging-sql-problems/problems/silver/funnel-analytics/: index.html
challenging-sql-problems/problems/silver/mandelbrot-set/: index.html
challenging-sql-problems/problems/silver/metric-correlation/: index.html
challenging-sql-problems/problems/silver/predicting-values/: index.html
challenging-sql-problems/problems/silver/region-precipitation/: index.html
challenging-sql-problems/solutions/bronze/: customer-churn--tsql.sql  outstanding-invoices--duckdb.sql
challenging-sql-problems/solutions/bronze/combining-dimensions/: index.html
challenging-sql-problems/solutions/bronze/customer-churn/: index.html
challenging-sql-problems/solutions/bronze/fibonacci-sequence/: index.html
challenging-sql-problems/solutions/bronze/outstanding-invoices/: index.html
challenging-sql-problems/solutions/bronze/personalised-customer-emails/: index.html
challenging-sql-problems/solutions/bronze/suspicious-login-activity/: index.html
challenging-sql-problems/solutions/bronze/temperature-anomaly-detection/: index.html
challenging-sql-problems/solutions/bronze/uk-bank-holidays/: index.html
challenging-sql-problems/solutions/gold/encoding-datelist-ints/: index.html
challenging-sql-problems/solutions/gold/loan-repayment-schedule/: index.html
challenging-sql-problems/solutions/gold/risk-invasions/: index.html
challenging-sql-problems/solutions/gold/supply-chain-network/: index.html
challenging-sql-problems/topics/: index.html
dockerfiles/: mssql.Dockerfile  postgres.Dockerfile
docs/: index.md
docs/challenging-sql-problems/: challenging-sql-problems.md
docs/everything-about-joins/syntax/: _other-joins.md
docs/ultimate-sql-setup-guide/: 00-introduction.md  01-online-sites.md  02-managed-services.md  03-single-file-databases.md  04-dbms-system-locally-installed.md  05-dbms-system-docker.md  06-self-managed-services.md  connecting-to-databases.md  glossary.md  introduction.md
everything-about-joins/everything-about-joins/: index.html
everything-about-joins/syntax/explosive-joins/: index.html
everything-about-joins/syntax/filtering-joins/: index.html
everything-about-joins/syntax/glue-joins/: index.html
everything-about-joins/syntax/join-fundamentals/: index.html
everything-about-joins/syntax/more-fundamentals/: index.html
everything-about-joins/syntax/sql-92-rant/: index.html
everything-about-joins/syntax/timestamp-joins/: index.html
everything-about-joins/under-the-hood/hash-joins/: index.html
everything-about-joins/under-the-hood/join-order/: index.html
everything-about-joins/under-the-hood/joins-with-an-index/: index.html
everything-about-joins/under-the-hood/loop-joins/: index.html
everything-about-joins/under-the-hood/merge-joins/: index.html
everything-about-joins/under-the-hood/range-intersection-joins/: index.html
from-excel-to-sql/advanced-concepts/advanced-aggregations/: index.html
from-excel-to-sql/advanced-concepts/correlated-subqueries/: index.html
from-excel-to-sql/advanced-concepts/recursive-ctes/: index.html
from-excel-to-sql/from-excel-to-sql/: index.html
from-excel-to-sql/getting-started/setting-the-context/: index.html
from-excel-to-sql/getting-started/sql-syntax/: index.html
from-excel-to-sql/main-concepts/comments/: index.html
from-excel-to-sql/main-concepts/conditionals/: index.html
from-excel-to-sql/main-concepts/data-types/: index.html
from-excel-to-sql/main-concepts/date-formatting/: index.html
from-excel-to-sql/main-concepts/group-by/: index.html
from-excel-to-sql/main-concepts/join/: index.html
from-excel-to-sql/main-concepts/logical-processing-order/: index.html
from-excel-to-sql/main-concepts/operators/: index.html
from-excel-to-sql/main-concepts/order-by/: index.html
from-excel-to-sql/main-concepts/rollup/: index.html
from-excel-to-sql/main-concepts/select-and-from/: index.html
from-excel-to-sql/main-concepts/style-guide/: index.html
from-excel-to-sql/main-concepts/subqueries/: index.html
from-excel-to-sql/main-concepts/top-and-distinct/: index.html
from-excel-to-sql/main-concepts/union/: index.html
from-excel-to-sql/main-concepts/where/: index.html
from-excel-to-sql/main-concepts/window-functions/: index.html
search/: search_index.json
src/metabase/: __main__.py
src/parser/: duckdb-connector.sql  tsql-uploader.sql
src/profiler/: __main__.py  setup.sql
src/resources/: __main__.py  resources.toml
tests/: test__resources.py
(+25 files in other folders)
